# Qt

IMT-ITIDA Labs/Day1/FirstProject/: CMakeLists.txt  main.cpp
IMT-ITIDA Labs/Day1/Project3/: Project3.pro  main.cpp  setting.cpp  setting.h
IMT-ITIDA Labs/Day1/untitled/: Class.hpp  main.cpp  producer.cpp  producer.h  producer.h.autosave  untitled.pro
